# getzipgit

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  getzipgit.spec
man/: getzipgit.8
